versioned_docs/version-2026.1.1/professor/mauro_cesar_de_souza_siena.mdx
---
sidebar_label: 'Mauro César de Souza Siena'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Mauro César de Souza Siena",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Matemática I - 2327",
          "size": 2,
          "teachers": [
            "Mauro César de Souza Siena"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2026"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Matemática III - 2463",
          "size": 2,
          "teachers": [
            "Mauro César de Souza Siena"
          ],
          "classroom": "sala_15-2",
          "students": [
            "COM2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Matemática I - 2327",
          "size": 2,
          "teachers": [
            "Mauro César de Souza Siena"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2026"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Gestão, Educação e Matemática Financeira - 2397",
          "size": 2,
          "teachers": [
            "Mauro César de Souza Siena"
          ],
          "classroom": "sala_3-1",
          "students": [
            "TGC2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Gestão, Educação e Matemática Financeira - 2397",
          "size": 2,
          "teachers": [
            "Mauro César de Souza Siena"
          ],
          "classroom": "sala_3-1",
          "students": [
            "TGC2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Mauro César de Souza Siena

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

